// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runPrompts > prompts for name when positional missing 1`] = `
{
  "audit": false,
  "auth": false,
  "http": true,
  "rateLimit": false,
  "session": false,
  "socket": true,
  "webhooks": false,
}
`;

exports[`runPrompts > prompts webhooks and audit only when both proteus and iris selected 1`] = `
[
  "expiry-cleanup",
]
`;

exports[`runPrompts > returns answers with positional name and defaults 1`] = `
{
  "db": "none",
  "features": {
    "audit": false,
    "auth": false,
    "http": true,
    "rateLimit": false,
    "session": false,
    "socket": false,
    "webhooks": false,
  },
  "irisDriver": "none",
  "issuer": "http://localhost:3000",
  "kv": "none",
  "projectDir": "<cwd>/my-app",
  "projectName": "my-app",
  "workers": [],
}
`;
